update option ids

--- a/index.html
+++ b/index.html
@@ -59,33 +59,33 @@
         <label for="job">Branch of Interest:</label>
         <select id="job" name="user_job" required>
           <optgroup label="Bio">
-            <option value="frontend_developer">Biomedical Engineering (BME)</option>
-            <option value="php_developor">Biotechnology (BT)</option>
+            <option value="Biomedical Engineering (BME)">Biomedical Engineering (BME)</option>
+            <option value="Biotechnology (BT)">Biotechnology (BT)</option>
            <!--  <option value="python_developer">Python Developer</option>
             <option value="rails_developer"> Rails Developer</option>
             <option value="web_designer">Web Designer</option>
             <option value="WordPress_developer">WordPress Developer</option> -->
           </optgroup>
           <optgroup label="BE">
-            <option value="Android_developer">Chemical Engineering (CHE)</option>
-            <option value="iOS_developer">Civil Engineering (CIE)</option>
-            <option value="mobile_designer">Computer Science & Business System (COBS)</option>
-			<option value="iOS_developer">Computer Engineering (COE)</option>
-            <option value="iOS_developer">Computer Science & Engineering (Patiala) (COPC)</option>
-            <option value="iOS_developer">Computer Science & Engineering (Derabassi) (COSE)</option>
-            <option value="iOS_developer">Electronics & Communication Engineering (ECE)</option>
-            <option value="iOS_developer">Electrical & Computer Engineering (ELC)</option>
-            <option value="iOS_developer">Electronics (Instrumentation & Control) Engineering (EIC)</option>
-            <option value="iOS_developer">Electrical Engineering (ELE)</option>
-            <option value="iOS_developer">Electronics & Computer Engineering (ENC)</option>
-            <option value="iOS_developer">Mechatronics (MEC)</option>
-            <option value="iOS_developer">Mechanical Engineering (MEE)</option>
-            <option value="iOS_developer">Mechanical Engineering (Production) (MPE)</option>
+            <option value="Chemical Engineering (CHE)">Chemical Engineering (CHE)</option>
+            <option value="Civil Engineering (CIE)">Civil Engineering (CIE)</option>
+            <option value="Computer Science & Business System (COBS)">Computer Science & Business System (COBS)</option>
+			<option value="Computer Engineering (COE)">Computer Engineering (COE)</option>
+            <option value="Computer Science & Engineering (Patiala) (COPC)">Computer Science & Engineering (Patiala) (COPC)</option>
+            <option value="Computer Science & Engineering (Derabassi) (COSE)">Computer Science & Engineering (Derabassi) (COSE)</option>
+            <option value="Electronics & Communication Engineering (ECE)">Electronics & Communication Engineering (ECE)</option>
+            <option value="Electrical & Computer Engineering (ELC)">Electrical & Computer Engineering (ELC)</option>
+            <option value="Electronics (Instrumentation & Control) Engineering (EIC)">Electronics (Instrumentation & Control) Engineering (EIC)</option>
+            <option value="Electrical Engineering (ELE)">Electrical Engineering (ELE)</option>
+            <option value="Electronics & Computer Engineering (ENC)">Electronics & Computer Engineering (ENC)</option>
+            <option value="Mechatronics (MEC)">Mechatronics (MEC)</option>
+            <option value="Mechanical Engineering (MEE)">Mechanical Engineering (MEE)</option>
+            <option value="Mechanical Engineering (Production) (MPE)">Mechanical Engineering (Production) (MPE)</option>
                       
           </optgroup>
           <optgroup label="Dual Degree BE-MBA">
-            <option value="business_owner">Electronics & Communication Engineering (BEMBA-ECE)</option>
-            <option value="freelancer">Mechanical Engineering (BEMBA-MEE)</option>
+            <option value="Electronics & Communication Engineering (BEMBA-ECE)">Electronics & Communication Engineering (BEMBA-ECE)</option>
+            <option value="Mechanical Engineering (BEMBA-MEE)">Mechanical Engineering (BEMBA-MEE)</option>
           </optgroup>
           <!-- <optgroup label="Other">
             <option value="secretary">Secretary</option>
