--- a/gallery.html
+++ b/gallery.html
@@ -161,6 +161,84 @@
 </div>
 </div>
 <div class="col-md-4 ftco-animate">
+<div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/library.jpg);">
+<a href="images/gallery-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+<span class="fa fa-expand"></span>
+</a>
+<div class="desc w-100 px-4">
+<div class="text w-100 mb-3">
+<span>CSED</span>
+<h2><a href="work-single.html">Library</a></h2>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-4 ftco-animate">
+<div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/droneshot.jpg);">
+<a href="images/gallery-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+<span class="fa fa-expand"></span>
+</a>
+<div class="desc w-100 px-4">
+<div class="text w-100 mb-3">
+<span>CSED</span>
+<h2><a href="work-single.html">Drone-Shot</a></h2>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-4 ftco-animate">
+<div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/droneshot2.jpg);">
+<a href="images/gallery-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+<span class="fa fa-expand"></span>
+</a>
+<div class="desc w-100 px-4">
+<div class="text w-100 mb-3">
+<span>CSED</span>
+<h2><a href="work-single.html">Drone-Shot</a></h2>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-4 ftco-animate">
+<div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/Amphitheatre.jpg);">
+<a href="images/gallery-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+<span class="fa fa-expand"></span>
+</a>
+<div class="desc w-100 px-4">
+<div class="text w-100 mb-3">
+<span>Theatre</span>
+<h2><a href="work-single.html">Amphi Theatre</a></h2>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-4 ftco-animate">
+<div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/oat.jpg);">
+<a href="images/gallery-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+<span class="fa fa-expand"></span>
+</a>
+<div class="desc w-100 px-4">
+<div class="text w-100 mb-3">
+<span>Theatre</span>
+<h2><a href="work-single.html">Open Air Theatre</a></h2>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-4 ftco-animate">
+<div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/hostel.jpg);">
+<a href="images/gallery-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+<span class="fa fa-expand"></span>
+</a>
+<div class="desc w-100 px-4">
+<div class="text w-100 mb-3">
+<span>Hostel</span>
+<h2><a href="work-single.html">Girls Hostel</a></h2>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-4 ftco-animate">
 <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-9.jpg);">
 <a href="images/gallery-9.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 <span class="fa fa-expand"></span>
