--- a/index.html
+++ b/index.html
@@ -257,6 +257,9 @@
               (BEMBA-ECE)</option>
             <option value="Mechanical Engineering (BEMBA-MEE)">Mechanical Engineering (BEMBA-MEE)</option>
           </optgroup>
+          <optgroup label="School Of Arts and Humanities">
+            <option value="TSLAS">Thapar School of Liberal Arts and Sciences </option>
+          </optgroup>
           <!-- <optgroup label="Other">
             <option value="secretary">Secretary</option>
             <option value="maintenance">Maintenance</option>
