--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <input type="email" id="mail" name="user_email" required>
 
         <label for="phone">Phone Number:</label>
-        <input type="text" id="phone" name="user_phone" required>
+        <input type="number" id="phone" name="user_phone" required>
 
         <label for="fname">Father's Name:</label>
         <input type="text" id="fname" name="f_name" required>
