--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
     e.preventDefault()
     //showLoadingIndicator()
     fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-      .then(response => window.location.replace("http://www.sidhantgoyal.me/TIET-openDay-new/landingpage.html"))
+      .then(response => window.location.replace("http://openday.thapar.edu/landingpage.html"))
       .catch(error => console.error('Error!', error.message))
   })
 
