--- a/landingpage.html
+++ b/landingpage.html
@@ -1,6 +1,6 @@
 <head> 
     <link rel="stylesheet" href="css/main.css"> 
-    <title>Responsive Background Example</title> 
+    <title>TIET-Open Day</title> 
     <style>
         body { 
     /* Image Location */ 
