--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
               (BEMBA-ECE)</option>
             <option value="Mechanical Engineering (BEMBA-MEE)">Mechanical Engineering (BEMBA-MEE)</option>
           </optgroup>
+          <optgroup label="School Of Arts and Humanities">
+            <option value="TSLAS">Thapar School of Liberal Arts and Sciences </option>
+          </optgroup>
         </select>
 
 
@@ -203,6 +206,9 @@
             <option value="Electronics & Communication Engineering (BEMBA-ECE)">Electronics & Communication Engineering
               (BEMBA-ECE)</option>
             <option value="Mechanical Engineering (BEMBA-MEE)">Mechanical Engineering (BEMBA-MEE)</option>
+          </optgroup>
+          <optgroup label="School Of Arts and Humanities">
+            <option value="TSLAS">Thapar School of Liberal Arts and Sciences </option>
           </optgroup>
           <!-- <optgroup label="Other">
             <option value="secretary">Secretary</option>
