--- a/index.html
+++ b/index.html
@@ -153,8 +153,10 @@
               (BEMBA-ECE)</option>
             <option value="Mechanical Engineering (BEMBA-MEE)">Mechanical Engineering (BEMBA-MEE)</option>
           </optgroup>
-          <optgroup label="School Of Arts and Humanities">
-            <option value="TSLAS">Thapar School of Liberal Arts and Sciences </option>
+          <optgroup label="School Of Liberal Arts">
+            <option value="BBA in Liberal Arts and Sciences ">BBA in Liberal Arts and Sciences</option>
+            <option value="B.A in Liberal Arts and Sciences">B.A in Liberal Arts and Sciences</option>
+            <option value="B.Sc in Liberal Arts and Sciences">B.Sc in Liberal Arts and Sciences</option>
           </optgroup>
         </select>
 
@@ -207,8 +209,10 @@
               (BEMBA-ECE)</option>
             <option value="Mechanical Engineering (BEMBA-MEE)">Mechanical Engineering (BEMBA-MEE)</option>
           </optgroup>
-          <optgroup label="School Of Arts and Humanities">
-            <option value="TSLAS">Thapar School of Liberal Arts and Sciences </option>
+          <optgroup label="School Of Liberal Arts">
+            <option value="BBA in Liberal Arts and Sciences ">BBA in Liberal Arts and Sciences</option>
+            <option value="B.A in Liberal Arts and Sciences">B.A in Liberal Arts and Sciences</option>
+            <option value="B.Sc in Liberal Arts and Sciences">B.Sc in Liberal Arts and Sciences</option>
           </optgroup>
           <!-- <optgroup label="Other">
             <option value="secretary">Secretary</option>
@@ -263,8 +267,10 @@
               (BEMBA-ECE)</option>
             <option value="Mechanical Engineering (BEMBA-MEE)">Mechanical Engineering (BEMBA-MEE)</option>
           </optgroup>
-          <optgroup label="School Of Arts and Humanities">
-            <option value="TSLAS">Thapar School of Liberal Arts and Sciences </option>
+          <optgroup label="School Of Liberal Arts">
+            <option value="BBA in Liberal Arts and Sciences ">BBA in Liberal Arts and Sciences</option>
+            <option value="B.A in Liberal Arts and Sciences">B.A in Liberal Arts and Sciences</option>
+            <option value="B.Sc in Liberal Arts and Sciences">B.Sc in Liberal Arts and Sciences</option>
           </optgroup>
           <!-- <optgroup label="Other">
             <option value="secretary">Secretary</option>
