--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
             <option value="BBA in Liberal Arts and Sciences ">BBA in Liberal Arts and Sciences</option>
             <option value="B.A in Liberal Arts and Sciences">B.A in Liberal Arts and Sciences</option>
             <option value="B.Sc in Liberal Arts and Sciences">B.Sc in Liberal Arts and Sciences</option>
+            <option value="M.A Psychology">M.A Psychology</option>
+          </optgroup>
+          <optgroup label="LM Thapar School of Management">
+            <option value="MBA">MBA</option>
+            <option value="Executive MBA">Executive MBA</option>
           </optgroup>
         </select>
 
@@ -213,6 +218,11 @@
             <option value="BBA in Liberal Arts and Sciences ">BBA in Liberal Arts and Sciences</option>
             <option value="B.A in Liberal Arts and Sciences">B.A in Liberal Arts and Sciences</option>
             <option value="B.Sc in Liberal Arts and Sciences">B.Sc in Liberal Arts and Sciences</option>
+            <option value="M.A Psychology">M.A Psychology</option>
+          </optgroup>
+          <optgroup label="LM Thapar School of Management">
+            <option value="MBA">MBA</option>
+            <option value="Executive MBA">Executive MBA</option>
           </optgroup>
           <!-- <optgroup label="Other">
             <option value="secretary">Secretary</option>
@@ -271,6 +281,11 @@
             <option value="BBA in Liberal Arts and Sciences ">BBA in Liberal Arts and Sciences</option>
             <option value="B.A in Liberal Arts and Sciences">B.A in Liberal Arts and Sciences</option>
             <option value="B.Sc in Liberal Arts and Sciences">B.Sc in Liberal Arts and Sciences</option>
+            <option value="M.A Psychology">M.A Psychology</option>
+          </optgroup>
+          <optgroup label="LM Thapar School of Management">
+            <option value="MBA">MBA</option>
+            <option value="Executive MBA">Executive MBA</option>
           </optgroup>
           <!-- <optgroup label="Other">
             <option value="secretary">Secretary</option>
