--- a/csed.html
+++ b/csed.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<title>Academic Units</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="css/animate.css">
-<link rel="stylesheet" href="css/owl.carousel.min.css">
-<link rel="stylesheet" href="css/owl.theme.default.min.css">
-<link rel="stylesheet" href="css/magnific-popup.css">
-<link rel="stylesheet" href="css/bootstrap-datepicker.css">
-<link rel="stylesheet" href="css/jquery.timepicker.css">
-<link rel="stylesheet" href="css/flaticon.css">
-<link rel="stylesheet" href="css/style.css">
-<link rel="icon" type="image/png" href="images/logo/logo.png"/>
+  <title>Academic Units</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="css/magnific-popup.css">
+  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+  <link rel="stylesheet" href="css/jquery.timepicker.css">
+  <link rel="stylesheet" href="css/flaticon.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/png" href="images/logo/logo.png" />
 </head>
+
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
       </span><img src="images/logo.jpg" style="width:10%;">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
@@ -30,14 +33,18 @@
           <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
           <li class="nav-item active"><a href="streams.html" class="nav-link">Academic Units</a></li>
 
-          <li class="nav-item"><a href="alumni.html" class="nav-link">Session with our Alumni</a></li>
-           <li class="nav-item"><a href="placement.html" class="nav-link">Placements</a></li>
+          <li class="nav-item"><a href="alumni.html" class="nav-link">Sessions with our Alumni</a></li>
+          <li class="nav-item"><a href="placement.html" class="nav-link">Placements</a></li>
+
 
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
+          <!-- <li class="nav-item"><a href="faqs.html" class="nav-link">FAQ's</a></li> -->
+          <!-- <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li> -->
         </ul>
       </div>
     </div>
   </nav>
+
 
 <!-- <section class="hero-wrap hero-wrap-2" style="background-image: url('images/hostelm.jpg');" data-stellar-background-ratio="0.5"> -->
 <!-- <div class="overlay"></div> -->
