--- a/index.html
+++ b/index.html
@@ -157,11 +157,15 @@
             <option value="BBA in Liberal Arts and Sciences ">BBA in Liberal Arts and Sciences</option>
             <option value="B.A in Liberal Arts and Sciences">B.A in Liberal Arts and Sciences</option>
             <option value="B.Sc in Liberal Arts and Sciences">B.Sc in Liberal Arts and Sciences</option>
-            <option value="M.A Psychology">M.A Psychology</option>
           </optgroup>
           <optgroup label="LM Thapar School of Management">
             <option value="MBA">MBA</option>
             <option value="Executive MBA">Executive MBA</option>
+            <option value="PhD residential">PhD Residential (full time)</option>
+            <option value="PhD Executive">PhD Executive</option>
+          </optgroup>
+          <optgroup label="School Of Humanities and Social Sciences">
+            <option value="M.A Psychology">M.A Psychology</option>
           </optgroup>
         </select>
 
@@ -218,11 +222,15 @@
             <option value="BBA in Liberal Arts and Sciences ">BBA in Liberal Arts and Sciences</option>
             <option value="B.A in Liberal Arts and Sciences">B.A in Liberal Arts and Sciences</option>
             <option value="B.Sc in Liberal Arts and Sciences">B.Sc in Liberal Arts and Sciences</option>
-            <option value="M.A Psychology">M.A Psychology</option>
           </optgroup>
           <optgroup label="LM Thapar School of Management">
             <option value="MBA">MBA</option>
             <option value="Executive MBA">Executive MBA</option>
+            <option value="PhD residential">PhD Residential (full time)</option>
+            <option value="PhD Executive">PhD Executive</option>
+          </optgroup>
+          <optgroup label="School Of Humanities and Social Sciences">
+            <option value="M.A Psychology">M.A Psychology</option>
           </optgroup>
           <!-- <optgroup label="Other">
             <option value="secretary">Secretary</option>
@@ -281,12 +289,17 @@
             <option value="BBA in Liberal Arts and Sciences ">BBA in Liberal Arts and Sciences</option>
             <option value="B.A in Liberal Arts and Sciences">B.A in Liberal Arts and Sciences</option>
             <option value="B.Sc in Liberal Arts and Sciences">B.Sc in Liberal Arts and Sciences</option>
-            <option value="M.A Psychology">M.A Psychology</option>
           </optgroup>
           <optgroup label="LM Thapar School of Management">
             <option value="MBA">MBA</option>
             <option value="Executive MBA">Executive MBA</option>
+            <option value="PhD residential">PhD Residential (full time)</option>
+            <option value="PhD Executive">PhD Executive</option>
           </optgroup>
+          <optgroup label="School Of Humanities and Social Sciences">
+            <option value="M.A Psychology">M.A Psychology</option>
+          </optgroup>
+          
           <!-- <optgroup label="Other">
             <option value="secretary">Secretary</option>
             <option value="maintenance">Maintenance</option>
