--- a/alumni.html
+++ b/alumni.html
@@ -378,7 +378,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <div class="col-md-6 col-lg-3 ftco-animate">
 <div class="staff">
 <div class="img-wrap d-flex align-items-stretch">
-<div class="img align-self-stretch" style="background-image: url(images/alumni/rajesh.jpeg);"></div>
+<div class="img align-self-stretch" style="background-image: url(images/rajesh.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Rajesh Uppal</h3>
@@ -465,7 +465,7 @@ Deutsche Bank</p>
 <div class="col-md-6 col-lg-3 ftco-animate">
 <div class="staff">
 <div class="img-wrap d-flex align-items-stretch">
-<div class="img align-self-stretch" style="background-image: url(images/alumni/gagan.jpeg);"></div>
+<div class="img align-self-stretch" style="background-image: url(images/gagan.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Gagan Gupta</h3>
@@ -491,7 +491,7 @@ Deutsche Bank</p>
 <div class="col-md-6 col-lg-3 ftco-animate">
 <div class="staff">
 <div class="img-wrap d-flex align-items-stretch">
-<div class="img align-self-stretch" style="background-image: url(images/alumni/ish.jpeg);"></div>
+<div class="img align-self-stretch" style="background-image: url(images/ish.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Ish Ahuja</h3>
