--- a/csed.html
+++ b/csed.html
@@ -165,31 +165,23 @@
 <div class="col-md-4 ftco-animate"style="-webkit-box-flex: 0;
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
-    max-width: 50%;">
+    max-width: 50%;
+   margin-left: 280px;">
 <div class="block-7">
-<div class="img" style="background-image: url(images/hodcse.jpg);height:450px;"></div>
+<div class="img" style="background-image: url(images/faculty/CSED.JPG);height:450px;"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Dr Maninder Singh</span>
-<p style="text-align: center;">HOD,CSED</p>
+<span class="excerpt d-block"style="text-align: center;">Computer Science and Engineering</span>
+<p style="text-align: center;">CSED</p>
+<p>The focus of the department is on state of the art projects done by our BE and ME students, excellent teaching learning process, better alumni relations, good industry attachment program through project semester and outcome based education.At the undergraduate level, the Department lays emphasis on Software Engineering, Algorithm Analysis and Design, Operating Systems, Computer Graphics, Database and information Systems Engineering and Networking Technologies. The Department provides exposure to emerging technologies as well as futuristic technologies like High Performance Computing, Computer Animation and Gaming, Machine Learning and Data Analytics, Information and Cyber Security and Software Engineering.
+
+</p>
+
 
 <a href="https://tiet.zoom.us/my/msingh/" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 </div>
 </div>
 </div>
-<div class="col-md-4 ftco-animate"style="-webkit-box-flex: 0;
-    -ms-flex: 0 0 50%;
-    flex: 0 0 50%;
-    max-width: 50%;">
-<div class="block-7">
-<div class="img" style="background-image: url(images/dipto2.jpg);height:450px;"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
-<p style="text-align: center;">Assistant Professor,CSED</p>
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-</div>
-</div>
-</div>
 </div>
 </div>
 </section>
