--- a/tslas.html
+++ b/tslas.html
@@ -161,7 +161,69 @@
     <!-- </div> -->
     <!-- </div> -->
     <!-- </div> -->
-    <div id="light">
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="row justify-content-center pb-5 mb-3">
+<div class="col-md-7 heading-section text-center ftco-animate">
+<h2 style="padding-left:200px;">Connect With Us</h2>
+</div>
+</div>
+<div class="row">
+
+<div class="col-md-4 ftco-animate"style="-webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+   margin-left: 280px;">
+<div class="block-7">
+<div class="img" style="background-image: url(images/drnair.jpg);height:450px;"></div>
+<div class="text-center p-4">
+<span class="excerpt d-block"style="text-align: center;">Thapar School of Liberal Arts & Sciences</span>
+<p style="text-align: center;">TSLAS</p>
+<p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
+<br>
+<p>The School of Liberal Arts & Sciences, is the School of New India. Keeping alive the legacy of its name, Thapar Institute of Engineering & Technology pioneers yet again to introduce the progressive program of Liberal Arts & Sciences in Punjab. The forward-thinking philosophy and pedagogy of this latest addition of teaching-learning opportunities created by TIET, presents students with prospects to engage within a choice based system of education that allows them to select varied sets of Majors and Minors to map their journey in higher education. Conceived in close collaboration with the University of Groningen, Netherlands, this unique School offers an inclusive and comprehensive program that will prepare students for deeper learning, unique cross-sectoral specializations, independent thinking, problem solving, and, for ‘everything’ envisaged with jobs of tomorrow. Incidentally, TSLAS’s philosophy stands in direct alignment with the recently introduced National Education Policy of India to be implemented in 2021. This brilliant School of higher learning, TSLAS, is launching this year (2020) and is already set to become one of the top ranking Liberal Arts & Sciences institution in the country. It boasts of a highly qualified faculty base who are internationally accomplished with a wide range of expertise; each of our faculty comes with wide international exposure and acclaim. Housed in the sprawling 250 acre TIET campus in Patiala, TSLAS currently offers BA, BBA & BSc degrees with a diverse range of interesting specializations from cognitive sciences to psychology to philosophy and more. TSLAS prides in its accomplished faculty, international partnerships with universities from across the world and the extensive infrastructure, but it cherishes most its unique pedagogy that presents combinations from across the arts, sciences and technology to create deep learning, global awareness, wisdom and sensitivity. At TSLAS, students will find various opportunities to engage with our partner universities under the student exchange programs and internships. And it also provides innumerable opportunities to interact with scholars, thinkers, philosophers, scientists, designers, industry partners and more.
+</p><p>
+Come join us in building the new India!
+  
+</p>
+
+
+
+<a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
+</div>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div id="light" style="margin-left: 290px;">
           <a class="boxclose" id="boxclose" onclick="lightbox_close();"></a>
           <!-- <video id="VisaChipCardVideo" width="600" controls>
               <source src="https://youtu.be/vvCOSclixJE" type="video/mp4"> -->
@@ -169,7 +231,7 @@
           <!--Browser does not support <video> tag -->
           </video>
         </div>
-<div class="row justify-content-center pb-5 mb-3">
+<!-- <div class="row justify-content-center pb-5 mb-3">
 <div class="col-md-7 heading-section text-center ftco-animate">
 <h2 style="padding-left:200px;">Connect With Us</h2>
 </div>
@@ -202,7 +264,7 @@
 <span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
 
 <a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-</div>
+ --></div>
 </div>
 </div>
 </div>
