--- a/eced.html
+++ b/eced.html
@@ -168,43 +168,25 @@
 </div>
 </div>
 <div class="row">
-<div class="col-md-4 ftco-animate">
+
+<div class="col-md-4 ftco-animate"style="-webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+   margin-left: 280px;">
 <div class="block-7">
-<div class="img" style="background-image: url(images/ashutosh.jpg);height: 450px;"></div>
+<div class="img" style="background-image: url(images/faculty/ece.JPG);height:450px;"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Dr Ashutosh K Singh</span>
-<p style="text-align: center;">Program Coordinator, BE (ENC)</p>
-
-<a href="https://tiet.zoom.us/j/96738464636?pwd=bDNKamlmaUMwaHZscE14RVk4a1J4UT09" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<span class="excerpt d-block"style="text-align: center;">Electronics and Communication Engineering</span>
+<p style="text-align: center;">ECED</p>
+<p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
 <br>
-<p style="text-align: center;">DATE & TIME : Sep 21, 2020 09:00 AM</p>
-</div>
-</div>
-</div>
-<div class="col-md-4 ftco-animate">
-<div class="block-7">
-<div class="img" style="background-image: url(images/manu.gif); height: 450px;"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block" style="text-align: center;">Dr Manu Bansal</span>
-<p style="text-align: center;">Program Coordinator, BE(ECE)</p>
+<p>Our aim is to educate the brilliant youth towards world-class education and to enable them to contribute to the development of our society. The responsibilities and dedications of our teachers lead the ECE Department towards an outstanding learning environment, where the state-of-the-art laboratories, libraries, access to knowledge resources, extracurricular activities all are present.Our department offers science-based engineering curriculum. The primary focus of our curriculum is to impart technical know-how to students, promote their problem solving skills and innovation of new technologies. Department offers large number of optional courses for providing wide spectrum of options to the students to pursue their interest. The department has strong industry and government research organisations connect to abreast the students with the new scientific and technological developments.  Undergraduate students are also encouraged to undertake various research projects.
 
-<a href="https://tiet.zoom.us/j/96738464636?pwd=bDNKamlmaUMwaHZscE14RVk4a1J4UT09" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-<br>
-<p style="text-align: center;">DATE & TIME : Sep 21, 2020 09:00 AM</p>
-</div>
-</div>
-</div>
-<div class="col-md-4 ftco-animate">
-<div class="block-7">
-<div class="img" style="background-image: url(images/sumit.jpg);height: 450px;"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;"> Dr Sumit Vyas</span>
-<p style="text-align: center;">ECED Web Incharge</p>
+</p>
 
+<a href="https://tiet.zoom.us/j/96738464636?pwd=bDNKamlmaUMwaHZscE14RVk4a1J4UT09" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
-<a href="https://tiet.zoom.us/j/96738464636?pwd=bDNKamlmaUMwaHZscE14RVk4a1J4UT09" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-<br>
-<p style="text-align: center;">DATE & TIME : Sep 21, 2020 09:00 AM</p>
 </div>
 </div>
 </div>
