--- a/med.html
+++ b/med.html
@@ -167,33 +167,25 @@
 </div>
 </div>
 <div class="row">
-<div class="col-md-4 ftco-animate">
-<div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-</div>
-</div>
-</div>
-<div class="col-md-4 ftco-animate">
+<div class="col-md-4 ftco-animate"style="-webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+   margin-left: 280px;">
 <div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
+<div class="img" style="background-image: url(images/faculty/Mechnical.JPG);height:450px;"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block" style="text-align: center;">Mr Dipto Barman</span>
+<span class="excerpt d-block"style="text-align: center;">Mechanical Engineering</span>
+<p style="text-align: center;">MED</p>
+<p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
+<br>
+<p>The department of Mechanical Engineering at TIET is one of the pioneering departments of the Institute and came into being in 1956 along with the establishments of Institute. In the last six decades, the department has made a steady progress and grown in stature. The UG programmes of the department are accredited by NBA and the B.E. Mechanical Engineering programme is also accredited by ABET.The department offers four Bachelor’s courses: B.E. Mechanical Engineering, B.E. Mechanical Production Engineering, B.E. Mechatronics Engineering, Integrated B.E. Mechanical MBA, three Master’s courses: M.E. CAD/CAM Engineering, M.E. Production Engineering, M.E. Thermal Engineering program; and PhD educations in the same areas.
+The department regularly revises its curriculum to align it with developments in technology and ever growing needs of industry. There is a significant industry connect which helps us to make our teaching-learning processes more effective and industry oriented. As a part of the academic contemporization to bring our teaching standards and practices at par with the best in the world, our curriculum has been harmonized with that of Trinity College Dublin.
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-</div>
-</div>
-</div>
-<div class="col-md-4 ftco-animate">
-<div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
+</p>
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 </div>
 </div>
 </div>
