--- a/chemical.html
+++ b/chemical.html
@@ -167,33 +167,24 @@
 </div>
 </div>
 <div class="row">
-<div class="col-md-4 ftco-animate">
-<div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-</div>
-</div>
-</div>
-<div class="col-md-4 ftco-animate">
+<div class="col-md-4 ftco-animate"style="-webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+   margin-left: 280px;">
 <div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
+<div class="img" style="background-image: url(images/faculty/chemical.JPG);height:450px;"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block" style="text-align: center;">Mr Dipto Barman</span>
+<span class="excerpt d-block"style="text-align: center;">Chemical Engineering</span>
+<p style="text-align: center;">CHED</p>
+<p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
+<br>
+<p>The program offers courses which have a mix of theoretical and practical aspects through classroom teaching and projects, field interactions and industrial training, capstone projects and experiential learning. In addition, the campus offers an outstanding array of events, activities and other multifarious extracurricular and co-curricular programs to enrich your academic experience and make you a rounded personality.In addition, guiding you through your journey to success are various entrepreneurial ventures and start-ups incubated by your peers at TIET.
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-</div>
-</div>
-</div>
-<div class="col-md-4 ftco-animate">
-<div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
+</p>
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 </div>
 </div>
 </div>
