--- a/civil.html
+++ b/civil.html
@@ -167,33 +167,24 @@
 </div>
 </div>
 <div class="row">
-<div class="col-md-4 ftco-animate">
-<div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-</div>
-</div>
-</div>
-<div class="col-md-4 ftco-animate">
+<div class="col-md-4 ftco-animate"style="-webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+   margin-left: 280px;">
 <div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
+<div class="img" style="background-image: url(images/faculty/civil.JPG);height:450px;"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block" style="text-align: center;">Mr Dipto Barman</span>
+<span class="excerpt d-block"style="text-align: center;">Civil Engineering</span>
+<p style="text-align: center;">CED</p>
+<p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
+<br>
+<p>We prepare our students to conceptualize, plan, design, construct and implement facilities meant for catering societal needs for today and tomorrow, and that is how students understand what civil engineering is all about.In BE Civil Engineering, Department offers three focus areas namely: Structural Engineering and Sustainable Materials, Smart cities, Infrastructure Development and Management. Our undergraduate curriculum is a perfect balance between theoretical requirements and practical aspects of not just the broad disciplines of civil engineering such as structure, surveying, geotechnical, transportation, and water resources engineering but also provides the management and entrepreneurial scope in its coverage. Our faculty has fundamental competencies to teach in all the above fields along with the support of our dedicated staff members.
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-</div>
-</div>
-</div>
-<div class="col-md-4 ftco-animate">
-<div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
+</p>
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 </div>
 </div>
 </div>
