--- a/home.html
+++ b/home.html
@@ -306,6 +306,75 @@
       </div>
     </div>
   </section>
+  <section class="ftco-section bg-light ftco-no-pt ftco-intro">
+    <div class="container">
+      <div class="row">
+        <div id="light">
+          <a class="boxclose" id="boxclose" onclick="lightbox_close();"></a>
+          <!-- <video id="VisaChipCardVideo" width="600" controls>
+              <source src="https://youtu.be/vvCOSclixJE" type="video/mp4"> -->
+          <iframe width="600" height="400" frameborder="0" allowfullscreen
+            src="https://www.youtube.com/embed/vvCOSclixJE">
+          </iframe>
+          <!--Browser does not support <video> tag -->
+          </video>
+        </div>
+
+        <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" style="margin-left: 200px;">
+          <div class="d-block services text-center">
+            <div class="icon d-flex align-items-center justify-content-center">
+              <img src="images/worker.png" style="width:80%;">
+            </div>
+            <div class="media-body">
+              <h3 class="heading" style="text-align: center;">Student Life</h3>
+              <p style="font-weight: bold;text-align: center;">Student life @ TIET</p>
+              <p></p>
+              <p><a href="lmtsm.html" onclick="lightbox_open();" class="btn btn-primary mr-md-4 py-3 px-4"
+                  style="margin-top: 90px; margin-left: 55px;">Visit LMTSM<span class="ion-ios-arrow-forward"></span></a></p>
+              <a href="lmtsm.html" class="btn-custom d-flex align-items-center justify-content-center"><span
+                  class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
+            </div>
+          </div>
+        </div>
+
+        
+        <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" >
+          <div class="d-block services text-center">
+            <div class="icon d-flex align-items-center justify-content-center">
+              <img src="images/psychology.png" style="width:110%;">
+            </div>
+            <div class="media-body">
+              <h3 class="heading">School of Humanities</h3>
+              <p style="font-weight: bold;">SCHOOL OF HUMANITIES AND SOCIAL SCIENCES</p>
+              <p><a href="alumni.html" class="btn btn-primary mr-md-3 py-3 px-4" style="margin-top:55px;margin-left: 50px;">View Page<span class="ion-ios-arrow-forward"></span></a></p>
+              <a href="humanities.html" class="btn-custom d-flex align-items-center justify-content-center"><span
+                  class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
+            </div>
+          </div>
+        </div>
+        
+
+       <!--  <div class="col-md-3 d-flex align-self-stretch px-4 ftco-animate">
+          <div class="d-block services text-center">
+            <div class="icon d-flex align-items-center justify-content-center">
+              <img src="images/help.png" style="width:140%;">
+            </div>
+            <div class="media-body">
+              <h3 class="heading">Industry Engagement and Placement Cell</h3>
+              <p style="font-weight: bold;">Know more about data-placement at Thapar</p>
+             <p>Have any doubts regarding the placements?</p> 
+              <p><a href="placement.html" class="btn btn-primary mr-md-4 py-3 px-4" style="margin-top: 40px;">Contact Placements<span
+                    class="ion-ios-arrow-forward"></span></a></p>
+              <a href="placement.html" class="btn-custom d-flex align-items-center justify-content-center"><span
+                  class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
+            </div>
+          </div>
+        </div> -->
+
+      </div>
+    </div>
+  </section>
+
 
 
 
