--- a/tslas.html
+++ b/tslas.html
@@ -187,7 +187,7 @@
    margin-left: 280px;">
 <div class="block-7">
 <div class="img" style="background-image: url(images/drnair.jpg);height:450px;"></div>
-<div class="text-center p-4">
+<div class="text-center p-4" style="width: ;">
 <span class="excerpt d-block"style="text-align: center;">Thapar School of Liberal Arts & Sciences</span>
 <p style="text-align: center;">TSLAS</p>
 <p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
