--- a/electrical.html
+++ b/electrical.html
@@ -45,7 +45,6 @@
     </div>
   </nav>
 
-
 <!-- <section class="hero-wrap hero-wrap-2" style="background-image: url('images/hostelm.jpg');" data-stellar-background-ratio="0.5"> -->
 <!-- <div class="overlay"></div> -->
 <!-- <div class="container">
@@ -114,7 +113,7 @@
 <div class="row" style="padding-top: 50px;">
 <div class="col-md-6 services-2 w-100 d-flex">
 <div class="icon d-flex align-items-center justify-content-center">
-  <span class="fal fa-users"></span>
+    <span class="fal fa-users"></span>
  -->
 <!-- </div> -->
 <!-- <div class="text pl-3">
@@ -124,7 +123,7 @@
 </div>
 <div class="col-md-6 services-2 w-100 d-flex">
 <div class="icon d-flex align-items-center justify-content-center">
-  <span class="fal fa-building"></span>
+    <span class="fal fa-building"></span>
 
 </div>
 <div class="text pl-3">
@@ -158,11 +157,85 @@
     <!-- <div class="row no-gutters slider-text align-items-end"> -->
     <!-- <div class="col-md-9 ftco-animate pb-5"> -->
     <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="home.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
-    <h1 class="mb-0 bread">EIED</h1>
+    <h1 class="mb-0 bread">Electrical & Instrumentation</h1>
     <!-- </div> -->
     <!-- </div> -->
     <!-- </div> -->
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="row justify-content-center pb-5 mb-3">
+<div class="col-md-7 heading-section text-center ftco-animate">
+<h2 style="padding-left:200px;">Connect With Us</h2>
+</div>
+</div>
+<div class="row">
+
+<div class="col-md-4 ftco-animate"style="-webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+   margin-left: 280px;">
+<div class="block-7">
+<div class="img" style="background-image: url(images/EIC.jpg);height:450px;"></div>
+<div class="text-center p-4" style="width: ;">
+<span class="excerpt d-block"style="text-align: center;">Electrical & Instrumentation</span>
+<p style="text-align: center;">ELE & EIC</p>
+<p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
+<br>
+<p>
+<p>The Department of Electrical and Instrumentation Engineering has been playing a vital role in producing scientists and technologists of highest caliber ever since it was established in the year 1956. The department runs two undergraduate programs, three post-graduate programs and Ph.D. program to cater to the ever challenging needs of technical excellence in all areas of electrical engineering. In addition to the strong undergraduate programs, the department has been playing a pioneering role in producing world class postgraduates and researchers. The infrastructure and lab facilities are upgraded from time to time and provide adequate opportunities for students and researchers to learn and innovate. The department has distinguished faculty, all holding degrees from renowned institutes in India and abroad. The department also undertakes many research projects sponsored by both the government and the industry.
+</p><!-- <p>
+Come join us in building the new India!
+  
+</p> -->
+
+
+
+<a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
+</div>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div id="light" style="margin-left: 290px;">
+          <a class="boxclose" id="boxclose" onclick="lightbox_close();"></a>
+          <!-- <video id="VisaChipCardVideo" width="600" controls>
+              <source src="https://youtu.be/vvCOSclixJE" type="video/mp4"> -->
+         <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/H4ljv2EjPxw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          --> <!--Browser does not support <video> tag -->
+          </video>
+        </div>
+
+
+
+<!-- <div class="row justify-content-center pb-5 mb-3">
 <div class="col-md-7 heading-section text-center ftco-animate">
 <h2 style="padding-left:200px;">Connect With Us</h2>
 </div>
@@ -170,9 +243,9 @@
 <div class="row">
 <div class="col-md-4 ftco-animate">
 <div class="block-7">
-<div class="img" style="background-image: url(images/vishal.jpg);height:450px;"></div>
+<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Dr Vishal Shrivastava</span>
+<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
 
 <a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 </div>
@@ -180,9 +253,9 @@
 </div>
 <div class="col-md-4 ftco-animate">
 <div class="block-7">
-<div class="img" style="background-image: url(images/sanjay.jpg);height:450px;"></div>
+<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block" style="text-align: center;">Dr Sanjay Jain</span>
+<span class="excerpt d-block" style="text-align: center;">Mr Dipto Barman</span>
 
 <a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 </div>
@@ -190,12 +263,12 @@
 </div>
 <div class="col-md-4 ftco-animate">
 <div class="block-7">
-<div class="img" style="background-image: url(images/mandeep.jpg);height:450px;"></div>
+<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Dr Mandeep Singh</span>
+<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
 
 <a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-</div>
+ --></div>
 </div>
 </div>
 </div>
@@ -203,11 +276,9 @@
 </section>
 
 <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
-<a href="http://eied.thapar.edu/" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
-  
+<a href="http://tslas.thapar.edu/?_ga=2.167818209.1955838888.1600158014-952579136.1569080336" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
+    
 </div>
-
-
 
 
 
